example/src/snapshots/krust_sitter_example__words__tests__words_grammar-2.snap
---
source: example/src/words.rs
assertion_line: 29
expression: "grammar::Words::parse(\"hello\")"
---
ParseResult {
    result: None,
    errors: [
        ParseError {
            node_position: Position {
                bytes: 0..5,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            error_position: Position {
                bytes: 0..5,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            lookaheads: [],
            reason: Error,
        },
        ParseError {
            node_position: Position {
                bytes: 0..5,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            error_position: Position {
                bytes: 0..5,
                start: Point {
                    line: 1,
                    column: 1,
                },
                end: Point {
                    line: 1,
                    column: 6,
                },
            },
            lookaheads: [],
            reason: Extract {
                struct_name: "Words",
                field_name: "keyword",
                reason: FieldExtraction {
                    message: "fields didn't match, cursor had: None, expected: keyword",
                },
            },
        },
    ],
}
